--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="open_browser">Open a Browser</string>
     <string name="open_camera">Camera</string>
     <string name="unavailable">Unavailable</string>
+    <string name="cancel" translatable="false">Cancel</string>
+    <string name="ok" translatable="false">Ok</string>
+    <string name="title_permissions" translatable="false">Enable the permissions in settings , they are needed ...</string>
     <string name="login" translatable="false">Login : %s</string>
 
     <string name="title_preferences">Share Preferences</string>
